2003-07-07  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/WSPoint.cxx:
	* Glasses/WSPoint.h:
	* Glasses/WSSeed.cxx:
	* Glasses/WSSeed.h:
	* Rnr/GL/WSPoint_GL_Rnr.cxx:
	* Rnr/GL/WSPoint_GL_Rnr.h:
	* Rnr/GL/WSSeed_GL_Rnr.cxx:
	* Rnr/GL/WSSeed_GL_Rnr.h:
	* glass.list: Added new glasses WSSeed and WSPoint

	* Rnr/GL/SMorph_GL_Rnr.cxx:
	* Rnr/GL/SMorph_GL_Rnr.h: Minor changes
